# spkg

./: .editorconfig  .gitignore  Cargo.toml  README.md
demo/: .gitignore  spkg.toml
demo/host/spkg/: config.toml
src/: commands.rs  main.rs  utils.rs
src/commands/: install.rs  list.rs  pack.rs  unpack.rs
src/utils/: archive.rs  database.rs
