[package]
name = "spkg"
version = "0.0.0"
edition = "2021"
description = "A system packaging and composition tool."
authors = ["Gregory N. Schmit <schmitgreg@gmail.com>"]
license = "MIT"
repository = "https://github.com/gregschmit/spkg"
keywords = ["package", "manager", "system", "pkg"]
categories = ["command-line-utilities", "development-tools", "development-tools::build-utils"]

[dependencies]
clap = { version = "*", features = ["derive"] }
ureq = "*"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
